# demo-uppy

./: .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Makefile  README.md  TESTING.md  copilot-instructions.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  demo_uploader.db  main.py  pyproject.toml
docs/: data_sources_in_scope.md
docs/mermaid/: file_upload.md  user_auth.md
frontend/: .dockerignore  App.tsx  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite-env.d.ts  vite.config.ts
frontend/components/: AdminOverview.tsx  AdminPanel.tsx  AuthSection.tsx  FileUploadPortal.tsx  SimpleUppyTest.tsx  StorageConfiguration.tsx  TemporaryPasswordModal.tsx  UppyFileUploader.tsx  UserManagement.tsx
frontend/components/forms/: ContainerForm.tsx  StorageAccountForm.tsx  UserForm.tsx
frontend/components/ui/: button.tsx  card.tsx  common.tsx  dialog.tsx  dialogs.tsx  form-fields.tsx  input.tsx  select.tsx  tabs.tsx
frontend/config/: constants.ts
frontend/hooks/: index.ts  useApi.ts  useContainers.ts  useForm.ts  useQuery.ts  useStorageManagement.ts  useUserManagement.ts
frontend/services/: api.ts  cachedApi.ts
frontend/styles/: globals.css
frontend/types/: index.ts
frontend/utils/: errors.ts  helpers.ts
scripts/: start-app.sh  start-backend.sh  start-frontend.sh
